# CurrencyExchange

./: .gitignore  LICENSE  README.md  init_database.py  install.sh  pyproject.toml  scheme.py
src/app/: server.py
src/app/dao/: __init__.py  base.py  sqlite_db.py
src/app/dto/: __init__.py  add.py  factory.py  get.py  query.py  update.py  validation_functions.py
src/app/exceptions/: validation.py
