[project]
name = "CurrencyExchange"
version = "0.1.0"
description = "My third pet project from Sergey Zhukov's roadmap"
authors = [
    { name = "Doworder", email = "" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Основные зависимости
]

[project.urls]
Homepage = "https://github.com/Doworder/CurrencyExchange"
Repository = "https://github.com/Doworder/CurrencyExchange"
BugTracker = "https://github.com/Doworder/CurrencyExchange/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CurrencyExchange"]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true