[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CurrencyExchange"
version = "0.1.0"
description = "My third pet project from Sergey Zhukov's roadmap"
authors = [
    { name = "Doworder" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
  "pytest==8.3.3"
]
dev = [
    "mypy==1.16.0",
    "ruff==0.12.0",
]

[project.urls]
Homepage = "https://github.com/Doworder/CurrencyExchange"
Repository = "https://github.com/Doworder/CurrencyExchange"
BugTracker = "https://github.com/Doworder/CurrencyExchange/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
enable_error_code = "explicit-override"
enable_incomplete_feature = 'NewGenericSyntax'
